Fix overlap with rtd button

--- a/assets/css/giscus-docs.css
+++ b/assets/css/giscus-docs.css
@@ -108,6 +108,10 @@ main .pagination-loader-container {
     padding: 2rem;
 }
 
+.gsc-comment-box {
+    width: 80%;
+}
+
 .gsc-comment-box-buttons {
     font-family: "Atkinson Hyperlegible";
 }
